# ciwt

./: .gitignore  CMakeLists.txt  README.md
apps/: CIWT.cpp  CMakeLists.txt  TestApp.cpp
cfg/: det_02.cfg  det_02_3DOP.cfg  det_02_regionlets.cfg
data/: kitti_sample.cfg
data/kitti_sample/training/det_02_regionlets/: 0003.txt  0003.txt~  0005.txt
include/connected_components/: CC.h
include/libelas/: descriptor.h  elas.h  filter.h  matrix.h  triangle.h
include/libviso2/: matcher.h  matrix.h  reconstruction.h  viso.h  viso_mono.h  viso_stereo.h
include/scene_segmentation/: ground_histogram.h  multi_scale_quickshift.h  object_proposal.h  parameters_gop3D.h  scene_segmentation.h  utils_segmentation.h
include/tracking/: category_filter.h  dynamics_handler.h  extended_kalman_filter.h  hypothesis.h  kalman_filter.h  multi_object_tracker_base.h  observation.h  qpbo.h  resource_manager.h  utils_tracking.h  visualization.h
script/: run_all.sh  run_det_split.sh  split_detections_sequence_to_frame.py  sync_images_remote.sh
src/: globals.h~
src/CIWT/: CIWT_dynamics_handler.cpp  CIWT_dynamics_handler.h  CIWT_tracker.cpp  CIWT_tracker.h  coupled_image_world_space_filter.cpp  coupled_image_world_space_filter.h  detection_postproc.cpp  detection_postproc.h  hypothesis_handling.cpp  multi_cue_object_tracker.cpp~  observation_fusion.cpp  observation_fusion.h  parameters_CIWT.h  potential_functions.cpp  potential_functions.h
src/connected_components/: CC.cpp  CPoint.cpp
src/libelas/: descriptor.cpp  elas.cpp  filter.cpp  matrix.cpp  triangle.cpp
src/libviso2/: filter.cpp  matcher.cpp  matrix.cpp  reconstruction.cpp  triangle.cpp  viso.cpp  viso_mono.cpp  viso_stereo.cpp
src/scene_segmentation/: ground_histogram.cpp  multi_scale_quickshift.cpp  object_proposal.cpp  scene_segmentation.cpp  utils_segmentation.cpp
src/sun_utils/: camera.cpp  camera.h  datasets_dirty_utils.cpp  datasets_dirty_utils.h  detection.cpp  detection.h  disparity.cpp  disparity.h  ground_model.cpp  ground_model.h  shared_types.h  utils_bounding_box.cpp  utils_bounding_box.h  utils_common.cpp  utils_common.h  utils_filtering.cpp  utils_filtering.h  utils_io.cpp  utils_io.h  utils_kitti.cpp  utils_kitti.h  utils_observations.cpp  utils_observations.h  utils_pointcloud.cpp  utils_pointcloud.h  utils_visualization.cpp  utils_visualization.h
src/tracking/: category_filter.cpp  extended_kalman_filter.cpp  hypothesis.cpp  kalman_filter.cpp  multi_object_tracker_base.cpp  observation.cpp  qpbo.cpp  resource_manager.cpp  utils_tracking.cpp  visualization.cpp
